--- a/config/nginx.dev.j2
+++ b/config/nginx.dev.j2
@@ -79,16 +79,21 @@ server {
     listen [::]:443 ssl;
 
     server_name {{ CLIENT_NAMES }};
-    root {{ PWD }}/client/dist;
 
     ssl_certificate {{ PWD }}/config/ssl/cert.crt;
-    ssl_certificate_key {{ PWD }}/config/ssl/cert.key;    
-    ssl_session_timeout 5m;   
+    ssl_certificate_key {{ PWD }}/config/ssl/cert.key;
+    ssl_session_timeout 5m;
     ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers "HIGH:!aNULL:!MD5 or HIGH:!aNULL:!MD5:!3DES";
     ssl_prefer_server_ciphers on;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header Scheme $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+
+        proxy_pass http://127.0.0.1:{{ DOCKER_VITE_PORT }};
     }
 }
