--- a/config/nginx.dev.j2
+++ b/config/nginx.dev.j2
@@ -94,6 +94,6 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
 
-        proxy_pass http://127.0.0.1:{{ DOCKER_VITE_PORT }};
+        proxy_pass http://127.0.0.1:{{ DOCKER_NEXT_PORT }};
     }
 }
